# rahgiri-bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml
bot/: __init__.py  __main__.py  config.py  enums.py  models.py
bot/handlers/: __init__.py  error.py  help.py  start.py  tracking.py
bot/keyboards/: markups.py
bot/utils/: exceptions.py  text.py  tracking.py
